# EC535-Final-Project

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  bbb_dht_read.h  database.py  fastapi_backend.py  index.html  main.c  main.py
